lab11 finalizado: Corregido, removido user-service.tar (mas de 100MB)

--- a/Laboratorio11/artifacts/user-service.yaml
+++ b/Laboratorio11/artifacts/user-service.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: user-service
-          image: user-service:32f5856
+          image: user-service:lab11
           imagePullPolicy: IfNotPresent
           env:
             - name: PORT
