--- a/Laboratorio11/artifacts/order-service.yaml
+++ b/Laboratorio11/artifacts/order-service.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: order-service
-          image: order-service:32f5856
+          image: order-service:lab11
           imagePullPolicy: IfNotPresent
           env:
             - name: PORT
